change image url

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -7,7 +7,7 @@
 {% block content %}
     <div class="product-detail">
         <div class="product-image">
-            <img src="{{ product.resized_image.url }}" alt="{{ product.name }}" style="max-width: 100%; height: auto;">
+            <img src="{{ product.image.url }}" alt="{{ product.name }}" style="max-width: 100%; height: auto;">
         </div>
         <div class="product-info">
             <h1>{{ product.name }}</h1>
